--- a/style.css
+++ b/style.css
@@ -1,3 +1,7 @@
+html {
+    cursor: url(imagens/mata_mosca.png) 30 30, auto;
+}
+
 body {
     background-image: url(imagens/bg.jpg);
     background-repeat: no-repeat;
@@ -8,17 +12,17 @@ body {
 
 .mosquito1 {
     width: 50px;
-    height: 50px
+    height: 50px;
 }
 
 .mosquito2 {
     width: 70px;
-    height: 70px
+    height: 70px;
 }
 
 .mosquito3 {
     width: 90px;
-    height: 90px
+    height: 90px;
 }
 
 /* */
